packages/orchestrator/src/worker/__tests__/fixtures/next-build-missing-module.stdout.txt
> sniplink@0.1.0 build /workspace/sniplink
> next build

   ▲ Next.js 14.2.5
   - Environments: .env.local

   Creating an optimized production build ...
 ✓ Compiled successfully
   Linting and checking validity of types  ...
Failed to compile.

./src/app/page.tsx:4:24
Type error: Cannot find module '@/components/CopyButton' or its corresponding type declarations.

  2 | import Link from 'next/link'
  3 | import { auth } from '@/auth'
> 4 | import { CopyButton } from '@/components/CopyButton'
    |                        ^
  5 | import { db } from '@/db'
  6 |
  7 | export default async function Home() {

 ELIFECYCLE  Command failed with exit code 1.
